fix: tasklist overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -59,3 +59,17 @@ body {
     text-align: center;
   }
 }
+
+
+.custom-scroll::-webkit-scrollbar {
+  width: 1px;
+}
+
+.custom-scroll::-webkit-scrollbar-thumb {
+  background: var(--color-primary); 
+  border-radius: 99px;
+}
+
+.custom-scroll::-webkit-scrollbar-track {
+  background: transparent;
+}
